style[] fix reponsive of contact container on iphone%

--- a/styles/_contact.styl
+++ b/styles/_contact.styl
@@ -26,10 +26,12 @@
 }
 @media(max-width:768px){
 .contact-container{
-padding:.5em
+    padding: 3.5em 0;
+    position: relative;
 }
 .contact-list .list-unstyled li{
      font-size: 3vh; 
+     width:100%
 }
 }
 @media (min-width:1000px){
