--- a/styles/_page.styl
+++ b/styles/_page.styl
@@ -33,13 +33,18 @@
   }
   @media (max-width:758px){
 
-        .main {
-   
+    .main {
     grid-column-start: 1;
     grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 3;
   
+    }
+    .container{
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+    width: 100%;
+    min-height: 100%;
     }
   
   }
